
Bug Fixes
---------------------

* GITHUB#12158: KeywordField#newSetQuery should clone input BytesRef[] to avoid modifying provided array. (Greg Miller)

* GITHUB#12196: Fix MultiFieldQueryParser to handle both query boost and phrase slop at the same time.  (Jasir KT)

* GITHUB#12202: Fix MultiFieldQueryParser to apply boosts to regexp, wildcard, prefix, range, fuzzy queries.  (Jasir KT)

* GITHUB#12214: Fix ordered intervals query to avoid skipping some of the results over interleaved terms. (Hongyu Yan)

* GITHUB#12212: Bug fix for a DrillSideways issue where matching hits could occasionally be missed. (Frederic Thevenet)

Build
---------------------

* GITHUB#12131: Generate gradle.properties from gradlew, if absent (Colvin Cowie, Uwe Schindler)

* GITHUB#12188: Building the lucene-core MR-JAR file is now possible without installing
  additionally required Java versions (Java 19, Java 20,...). For compilation, a special
  JAR file with Panama-foreign API signatures of each supported Java version was added to
  source tree. Those can be regenerated an demand with "gradlew :lucene:core:regenerate".
  (Uwe Schindler)

* GITHUB#12215: Upgrade forbiddenapis to version 3.5.  This tones down some verbose warnings
  printed while checking Java 19 and Java 20 sourcesets for the MR-JAR.  (Uwe Schindler)

Other
---------------------

* GITHUB#11868: Add a FilterIndexInput and FilterIndexOutput class to more easily and safely create delegate
  IndexInput and IndexOutput classes (Marc D'Mello)

======================== Lucene 9.5.0 =======================

API Changes
---------------------
* GITHUB#11998: Add new stored fields and termvectors interfaces: IndexReader.storedFields()
  and IndexReader.termVectors(). Deprecate IndexReader.document() and IndexReader.getTermVector().
  The new APIs do not rely upon ThreadLocal storage for each index segment, which can greatly
  reduce RAM requirements when there are many threads and/or segments.
  (Adrien Grand, Robert Muir)
