@@ -53,6 +53,13 @@ class TermAutomatonScorer extends Scorer {
   private int docID = -1;
   private int freq;
 
+  /**
+   * originalSubsOnDoc is an array of EnumAndScorer instances used to create this
+   * TermAutomatonScorer. This field is only for explain purposes and should not be used for
+   * scoring/matching.
+   */
+  private final EnumAndScorer[] originalSubsOnDoc;
+
   public TermAutomatonScorer(
       TermAutomatonWeight weight, EnumAndScorer[] subs, int anyTermID, LeafSimScorer docScorer)
       throws IOException {
@@ -65,6 +72,7 @@ class TermAutomatonScorer extends Scorer {
     this.anyTermID = anyTermID;
     this.subsOnDoc = new EnumAndScorer[subs.length];
     this.positions = new PosState[4];
+    this.originalSubsOnDoc = subs;
     for (int i = 0; i < this.positions.length; i++) {
       this.positions[i] = new PosState();
     }
@@ -343,6 +351,14 @@ class TermAutomatonScorer extends Scorer {
     for (int i = 0; i <= limit; i++) {
       positions[i].count = 0;
     }
+  }
+
+  EnumAndScorer[] getOriginalSubsOnDoc() {
+    return originalSubsOnDoc;
+  }
+
+  LeafSimScorer getLeafSimScorer() {
+    return docScorer;
   }
 
   @Override
